--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,46 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Assignment Starter</title>
+  <title>Alex-WSU Envisioneering Site</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="./stylesheets/main.css">
+  <link rel="stylesheet" href="./stylesheets/homepage.css">
 </head>
 
 <body>
-  <!--  Your HTML goes here-->
-  <h1>Welcome to WEB 1400!!!!!</h1>
-<script type="module" src="./javascripts/main.js"></script>
+<nav>
+<a href="index.html">Alex-WSU Envisioneering Site</a>
+<ul class="mainNav">
+  <li><a href="journey.html">Journey</a></li>
+  <li><a href="favorites.html">Favorites</a></li>
+  <li><a href="about.html">About Me</a></li>
+
+</ul>
+</nav>
+
+<header>
+  <h1>Alex's WSU Summer Bridge Website</h1>
+  <p>Alex is a teen from Ogden Utah that goes to a program at weber to obtain colleg credis </p>
+  <p>in Alex's time off he likes to play with his friends and go play soccer, also one of the most important things to him is time becasue eveybody wnats either more or less time for anything but the best time is spending it with the ones you love like family.</p>
+  <a href="about.html"class="lg-btn">learn about me </a>
+</header>
+
+<main>
+  <h2>things i like </h2>
+  <img src="" alt="">
+  <figcaption>
+    the best| photo by 
+  </figcaption>
+</main>
+
+<footer>
+<span>&copy;2025 - Alexander Alanis</span>
+<div>
+  <ul>
+    <li><a href="https://www.tiktok.com/explore">tiktok</a></li>
+  </ul>
+</div>
+</footer>
+
 </body>
 </html>
