--- a/src/journey.html
+++ b/src/journey.html
@@ -1,1 +1,37 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+  <meta charset="utf-8">
+  <title>SB journey</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="./stylesheets/main.css">
+  <link rel="stylesheet" href="./stylesheets/journey.css">
+</head>
+
+<body>
+<nav>
+<a href="index.html">Alex-WSU Envisioneering Site</a>
+<ul class="mainNav">
+  <li><a href="journey.html">Journey</a></li>
+  <li><a href="favorites.html">Favorites</a></li>
+  <li><a href="about.html">About Me</a></li>
+
+</ul>
+</nav>
+
+<header></header>
+
+<main></main>
+
+<footer>
+<span>&copy;2025 - Alexander Alanis</span>
+<div>
+  <ul>
+    <li><a href="https://www.tiktok.com/explore">tiktok</a></li>
+  </ul>
+</div>
+</footer>
+
+</body>
+</html>
