commit abt me and fav

--- a/src/about.html
+++ b/src/about.html
@@ -20,9 +20,33 @@
 </ul>
 </nav>
 
-<header></header>
+<header>This Is About Me
+  <p>  Born on May 15, 2009, in the heart of Ogden, Utah, Alex Alanis aka me was a young dreamer with a clear vision for the future. Growing up in a lively household with two older sisters, one older brother, and loving parents, I have always been surrounded by support, laughter, and a strong sense of family.
 
-<main></main>
+    <p>Soccer runs deep in my veins. Whether it's cheering for Real Madrid on a Champions League night or backing Club América in Liga MX, my passion for the game is undeniable. When i'm not watching matches, i'm out on the field or immersed in the world of video games, where strategy, skill, and fun collide.</p>
+   
+   <p> But me it's more than just a sports and gaming enthusiast i'm a student with ambition. Attending Ogden High School, O-Tech, and Weber, I laying the foundation for a bright and successful future. With a strong work ethic and a desire to grow, I strives to become someone who makes a difference.</p>
+</header>
+
+<main>
+  <section>
+    <div class="form">
+  <h1>Contact Me</h1>
+  <form action="get">
+    <label for="txtName">Name:</label>
+    <br>
+    <input type="text" name = "txtName" placeholder="Enter Your Name" required>
+    <br>
+    <label for="txtEmail">Email</label>
+    <br>
+    <input type="email" name = "txtEmail" placeholder="Name@email.com" required>
+  
+    <input type="submit">
+    </form>
+  </div>
+    <img src="images/DSC_5766.jpg" alt="picture of Alex">
+</section>
+</main>
 
 <footer>
 <span>&copy;2025 - Alexander Alanis</span>
