--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,8 @@
 <span>&copy;2025 - Alexander Alanis</span>
 <div>
   <ul>
-    <li><a href="https://www.tiktok.com/explore">tiktok</a></li>
+    <li><a href="https://www.tiktok.com/explore">TikTok</a></li>
+    <li><a href="https://www.instagram.com/explore">Instagram</a></li>
   </ul>
 </div>
 </footer>
