--- a/src/journey.html
+++ b/src/journey.html
@@ -20,7 +20,11 @@
 </ul>
 </nav>
 
-<header></header>
+<header>
+  <h2>This Is My Journey Of Summer Bridge</h2>
+  <p> Hello, My name is Alex Alanis. This is my 2nd year doing this program. Last year the classes were okay and every interesting thing I did was a lot of fun. But coming into this new year i was a little skeptical because of the classes i did have some experience with coding in 8th grade nd i hatted it.At first WEB 1400 wasnt that hard but i really didn't like it it was fun in the beginning because it wasn't to hard but more in the middle i started to get a little lost and wanted to give up. After looking back and taking a step back and relook all that we learned and got a lot of help from everyone made the class so much more fun and enjoyable to learn. </p>
+  <p>WEB 1400 was a very mixed emotions type of class. There would be times where I like the class because it wouldn’t be so hard and at times it could be fun. On other days I would hate all the typing we would have to do and at the end of the day I would be so tired all I wanted to do was go to sleep. But this class taught me a lot about all the things that are behind every website and made me appreciate the developers of the websites and how they organized to make it simple. And all the time and effort, learning everything that i had to do just to make a simple website like p, h1, section, header, footer, Nav, also the style sheets to make the website what it is and make it organized.There was things i lacked like understanding the language and having the patients. </p>
+</header>
 
 <main></main>
 
