--- a/src/index.html
+++ b/src/index.html
@@ -28,10 +28,10 @@
 </header>
 
 <main>
-  <h2>things i like </h2>
-  <img src="" alt="">
+  <h2>Things I Like </h2>
+  <img src="images/Champions.webp" alt=" Best team in the world">
   <figcaption>
-    the best| photo by 
+   Photo By the Best|<a href="https://www.realmadrid.com/en-US/the-club/track-record/football">Real Madrid</a>
   </figcaption>
 </main>
 
